# mmck-lang

./: .travis.yml  Makefile.am  NEWS  README  README.md  configure.ac
doc/: mmck-lang.texi
lib/: config.scm.in  mmck.lang.assertions.scm  mmck.lang.booleans.scm  mmck.lang.core.scm  mmck.lang.debug.scm  mmck.lang.lists.scm  mmck.lang.scm  mmck.lang.strings.scm  mmck.lang.vectors.scm  mmck.lang.version.scm
meta/travis-ci/: install-mmck-exceptional-conditions.sh
tests/: test-lang-assertions.scm  test-lang-booleans.scm  test-lang-core.scm  test-lang-lists.scm  test-lang-strings.scm  test-lang-vectors.scm  test-version.scm
